# FCCSW

./: geant_fullsim_ecal_eta.py  init.sh  plotClusters.py  simple_workflow.py
Detector/DetCommon/: CMakeLists.txt
Detector/DetCommon/DetCommon/: DetUtils.h
Detector/DetCommon/compact/: materials.xml
Detector/DetCommon/src/: DetUtils.cpp
Detector/DetComponents/: CMakeLists.txt
Detector/DetComponents/src/: RedoSegmentation.cpp  RedoSegmentation.h
Detector/DetFCChhCalDiscs/compact/: Endcaps_coneCryo.xml  Endcaps_coneCryo_calibration.xml  Forward_coneCryo.xml  Forward_coneCryo_calibration.xml
Detector/DetFCChhCalDiscs/src/: CaloEndcapDiscs_geo.cpp
Detector/DetFCChhCalEndcapDiscs/compact/: Endcaps_coneCryo.xml  Endcaps_cylinderCryo.xml
Detector/DetFCChhECalInclined/compact/: FCChh_ECalBarrel_Common.xml
Detector/DetFCChhECalInclined/src/: ECalBarrelInclined_geo.cpp
Detector/DetFCChhECalSimple/compact/: FCChh_ECalBarrel_Common.xml  FCChh_ECalBarrel_Mockup.xml  FCChh_ECalDefinition.xml
Detector/DetFCChhECalSimple/src/: ECalBarrel_geo.cpp
Detector/DetFCChhHCalTile/compact/: FCChh_HCalBarrel_TileCal.xml  FCChh_HCalExtendedBarrel_TileCal.xml  FCChh_HCalTileDefinition.xml
Detector/DetFCChhHCalTile/src/: HCalBarrel_geo.cpp
Detector/DetSegmentation/DetSegmentation/: GridLocalPhi.h  GridPhiEta.h  GridRPhiEta.h
Detector/DetSegmentation/src/: GridLocalPhi.cpp  GridPhiEta.cpp  GridRPhiEta.cpp
Detector/DetStudies/: CMakeLists.txt
DetectorDescription/DetSensitive/DetSensitive/: StandaloneCalorimeterHit.h  StandaloneCalorimeterSD.h
DetectorDescription/DetSensitive/src/: GFlashCalorimeterSD.cpp  GFlashCalorimeterSD.h  SDWrapper.cpp  SegmentationHelper.cpp  SimpleCalorimeterSD.cpp
DetectorDescription/Detectors/compact/: FCChh_HCalBarrel_TileCal.xml  ParametricSimEnvelopes.xml  TestHCal.xml  materials.xml
DetectorDescription/Detectors/src/: SimpleTube_geo.cxx
Examples/: CMakeLists.txt
Examples/options/: geant_fastsim_gflash.py
Examples/src/: InspectHitsCollectionsTool.cpp
GaudiTests/: CMakeLists.txt
GaudiTests/options/: algProperties.py  algToolWithTool.py  algToolWithVector.py  toolProperties.py  toolWithOutput.py
GaudiTests/src/: IToolWithOutput.h  OtherTool.cpp  PropertyAlgTool.h  TestGeneralAlgorithm.cpp  TestMultipleToolInstancesAlgorithm.h  TestSavingAlgorithm.cpp  TestSubAlgorithm.h  TestToolAlgorithm.cpp  TestToolAlgorithm.h  TestToolService.cpp  TestToolService.h  TestVectorAlgorithm.cpp  TestVectorAlgorithm.h  ToolWithOtherTool.cpp  ToolWithOtherTool.h  ToolWithOutput.h  ToolWithTool.cpp  ToolWithTool.h  ToolWithVector.cpp  ToolWithVector.h
Generation/src/components/: MomentumRangeParticleGun.cpp  PythiaInterface.cpp
Reconstruction/RecCalorimeter/: CMakeLists.txt
Reconstruction/RecCalorimeter/options/: runEcalReconstruction.py
Reconstruction/RecCalorimeter/scripts/: checkClusters.py
Reconstruction/RecCalorimeter/src/components/: BuildCaloTowersTool.cpp  BuildCaloTowersTool.h  CalibrateCaloHitsTool.cpp  CalibrateCaloHitsTool.h  CaloTowerTool.cpp  CaloTowerTool.h  CombinedCaloTowerTool.cpp  CombinedCaloTowerTool.h  CorrectCluster.cpp  CorrectCluster.h  CreateCaloCells.cpp  CreateCaloCells.h  CreateCaloClusters.cpp  CreateCaloClusters.h  CreateCaloClustersSlidingWindow.cpp  CreateCaloClustersSlidingWindow.h  CreateFCChhCaloNeighbours.cpp  CreateMidVolLocalPhiPositions.cpp  CreateMidVolLocalPhiPositions.h  CreateMidVolPositions.cpp  CreateMidVolPositions.h  CreatePositionedHit.cpp  CreatePositionedHit.h  LayeredCaloTowerTool.cpp  LayeredCaloTowerTool.h  NoiseCaloCellsComplexTool.cpp  NoiseCaloCellsComplexTool.h  NoiseCaloCellsFlatTool.cpp  NoiseCaloCellsFlatTool.h  NoiseCaloCellsFromFileTool.cpp  NoiseCaloCellsFromFileTool.h  NoiseCaloCellsTool.cpp  NoiseCaloCellsTool.h  NoiseCorrectionToClusterTool.cpp  NoiseCorrectionToClusterTool.h  SingleCaloTowerTool.cpp  SingleCaloTowerTool.h
Reconstruction/RecCalorimeter/tests/options/: dumpHCalGeometry.py  geant_fullsim_combinedCalo_singleparticles.py  geant_fullsim_hcal_singleparticles.py  runCombinedReconstructionWithoutNoise.py  runEcalReconstruction.py  runEcalReconstructionFlatNoise.py  runEcalReconstructionWithoutNoise.py  runFullCaloSystem_ReconstructionSW_clusterCorrections.py  runFullCaloSystem_ReconstructionSW_noiseFromFile.py  runHcalDigitisationFlatNoise.py  runHcalDigitisationWithoutNoise.py  runHcalReconstructionWithoutNoise.py
Reconstruction/RecInterface/RecInterface/: IBuildCaloTowersTool.h  INoiseCaloCellsTool.h  INoiseCorrectionTool.h  ITowerTool.h
Reconstruction/doc/: RecCalorimeter.md
Reconstruction/src/: JetClustering.h
Sim/SimG4Common/: CMakeLists.txt
Sim/SimG4Common/SimG4Common/: DebugSteppingAction.h  ExitTrackerParticleInformation.h  KillSecondariesAction.h
Sim/SimG4Common/gdml/: gflashDetector.xml
Sim/SimG4Common/src/: DebugSteppingAction.cpp  ExitTrackerParticleInformation.cpp  KillSecondariesAction.cpp
Sim/SimG4Components/src/: G4FtfpBert.cpp  G4FtfpBert.h  G4FullSimAlg.cpp  G4SaveCalHits.cpp  G4SaveStandaloneCalHits.cpp  G4SaveStandaloneCalHits.h  G4SimAlg.cpp  SimG4SingleParticleGeneratorTool.cpp
Sim/SimTests/: CMakeLists.txt
Sim/SimTests/options/: algToolWithVector.py  algWithSubAlg.py  multipletoolinstancesalg.py  svcToolWithOtherToolTest.py  svcToolWithTool.py  toolWithOutputTest.py
Sim/SimTests/src/: IOtherTool.h  IToolWithMember.h  OtherTool.cpp  OtherTool.h  PropertyAlgTool.cpp  TestGeneralAlgorithm.h  TestMultipleToolInstancesAlgorithm.cpp  TestMultipleToolInstancesAlgorithm.h  TestReadingAlgorithm.cpp  TestReadingAlgorithm.h  TestSavingAlgorithm.cpp  TestSavingAlgorithm.h  TestSubAlgorithm.cpp  TestToolService.cpp  TestToolService.h  ToolWithMember.cpp  ToolWithMember.h  ToolWithOutput.cpp  ToolWithVector.cpp
Test/TestGeometry/: CMakeLists.txt
TestSubAlgorithm/: CMakeLists.txt
TestSubAlgorithm/TestSubAlgorithm/: TestAlg.h  TestSubAlg.h
TestSubAlgorithm/config/: test_subalg.py
TestSubAlgorithm/src/: TestAlg.cpp  TestSubAlg.cpp
config/: geant_fullsim_smearexitpos.py
options/: geant_fastsim.py
(+50 files in other folders)
